--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env ENVIRONMENT=production node index.js",
+    "dev": "cross-env ENVIRONMENT=development nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kushagra agarwal",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
+    "nodemon": "^3.1.10"
   }
 }
